crates/hir-ty/tests/snapshots/jls_records__compact_ctor_component_assignment.snap
---
source: crates/hir-ty/tests/jls_records.rs
expression: out
---
FILE /src/com/example/Rec.java:
package com.example;

record Rec(int x, String s) {
    Rec {
        x = 1;
        s = "a";
    }
}
