crates/hir-ty/tests/snapshots/jls_records__explicit_ctor_delegates_to_compact.snap
---
source: crates/hir-ty/tests/jls_records.rs
expression: out
---
FILE /src/com/example/Rec.java:
package com.example;

record Rec(String a, String b, String c, String d, String e, String f) {
    Rec {
    }
    Rec(String a, String b, String c, String d, boolean e, String f) {
        this(a, b, c, d, e ? "L" : "R", f);
    }
}
